<resources>
    <string name="app_name">UiDesign3</string>
    <string name="next">Next</string>
    <string name="onboarding_text">Enjoy these pre-made components and worry only\nabout creating the best product ever.</string>
    <string name="create_a_prototype_in_just_na_few_minutes">Create a prototype in just\na few minutes</string>
    <string name="personalise_your_experience">Personalise your\n experience</string>
    <string name="user_interface">User Interface</string>
    <string name="choose_your_subscription_plan">Choose your \nsubscription plan</string>
    <string name="and_get_a_7_day_free_trial">And get a 7-day free trial</string>
    <string name="choose_your_interests">Choose your interests.</string>
    <string name="yearly">Yearly</string>
    <string name="_66_discount">-66% discount</string>
    <string name="_94_80">€ 94.80</string>
    <string name="every_year">every year</string>
    <string name="you_ll_get">You\'ll get:</string>
    <string name="unlimited_access">Unlimited access</string>
    <string name="subscribe">Subscribe</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="register_now">Register now</string>
    <string name="not_a_member">Not a member</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign up</string>
    <string name="create_an_account_to_get_started">Create an account to get started</string>
    <string name="name">Name</string>
    <string name="name_email_com">name@email.com</string>
    <string name="create_a_passaword">Create a passaword</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup_note">I\'ve read and agree with the <b><font color="#006FFD">Terms and\nConditions</font></b> and the <b><font color="#006FFD">Privacy Policy</font></b>.</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="Confirmation_code_note">A 4-digit code was sent to \nlucasscott3@email.com</string>
    <string name="resend_code">Resend code</string>
    <string name="btn_continue">Continue</string>
    <string name="settings">Settings</string>
    <string name="tv_user_name">Lucas Scott</string>
    <string name="tv_user_subname">\@lucasscott3</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="haley_james">Haley James</string>
    <string name="stand_up_for_what_you_believe_in">Stand up for what you believe in</string>
    <string name="_9">9</string>
    <string name="brooke_davis">Brooke Davis</string>
    <string name="type_a_message">Type a message…</string>
    <string name="start_a_project">Start a project</string>
    <string name="this_is_where_you_ll_find_your_nfinished_projects">This is where you’ll find your\nfinished projects.</string>
    <string name="nothing_here_for_now">Nothing here. For now.</string>
    <string name="projects">Projects</string>
    <string name="explore">Explore</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="your_project_is_finished">Your project is finished.</string>
    <string name="how_would_you_rate_the_prototyping_kit">How would you rate the prototyping kit?</string>
    <string name="what_did_you_like_about_it">What did you like about it?</string>
    <string name="easy_to_use">EASY TO USE</string>
    <string name="complete">COMPLETE</string>
    <string name="helpful">HELPFUL</string>
    <string name="convenient">CONVENIENT</string>
    <string name="looks_good">LOOKS GOOD</string>
    <string name="what_could_be_improved">What could be improved?</string>
    <string name="could_have_more_components">COULD HAVE MORE COMPONENTS</string>
    <string name="complex">COMPLEX</string>
    <string name="not_interactive">NOT INTERACTIVE</string>
    <string name="only_english">ONLY ENGLISH</string>
    <string name="anything_else">Anything else?</string>
    <string name="tell_us_everything">Tell us everything.</string>
    <string name="submit">Submit</string>
    <string name="recent_searches">RECENT SEARCHES</string>
    <string name="shoes">Shoes</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="_2">2</string>
    <string name="_12_00">€ 12.00</string>
    <string name="product_name">Product Name</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="stores">Stores</string>
    <string name="perfect_for_you">Perfect for you</string>
    <string name="see_more">See more</string>
    <string name="for_this_summer">For this summer</string>
    <string name="amazing_t_shirt">Amazing T-Shirt</string>
    <string name="product_description">The perfect T-shirt for when you want to feel comfortable but still stylish. Amazing for all occasions.
Made of 100% cotton fabric in four colours. Its modern style gives a lighter look to the outfit. Perfect for the warmest days.</string>
    <string name="size">Size</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="color">Color</string>
    <string name="add_to_bag">  Add to bag</string>
    <string name="_1">1</string>
    <string name="total">Total</string>
    <string name="_83_00">€ 83.00</string>
    <string name="checkout">Checkout</string>
    <string name="separator">/</string>
    <string name="black">Black</string>
    <string name="your_bag">Your bag</string>
    <string name="_3">3</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
    <string name="review">Review</string>
    <string name="choose_a_payment_method">Choose a payment method</string>
    <string name="checkout_note">You won\'t be charged until you review the order on the next page</string>
    <string name="mastercard">Mastercard</string>
    <string name="xxxx_xxxx_xxxx_1234">xxxx xxxx xxxx 1234</string>
    <string name="add_new_card">Add new card</string>
    <string name="checkout_checkbox_note">My billing address is the same as my shipping address</string>
    <string name="credit_card">Credit Card</string>
    <string name="near_you">Near you</string>
    <string name="recife_brazil">Recife, Brazil</string>
    <string name="mar_05">MAR 05</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="your_events">Your events</string>
    <string name="selling_out">Selling out</string>
</resources>