<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_user" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18.5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_username"
            style="@style/style_tv_semi_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haley_james" />

        <TextView
            android:id="@+id/tv_Message"
            style="@style/style_tv_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stand_up_for_what_you_believe_in" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_Message_count"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/margin_button_horizontal_default"
        android:background="@drawable/vector_chat_counter"
        android:gravity="center"
        android:text="@string/_9"
        android:textColor="@color/white" />
</LinearLayout>