<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/img_login_screen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/style_tv_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_default"
                android:text="@string/welcome" />

            <EditText
                style="@style/style_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_default"
                android:background="@drawable/vector_et_unselected"
                android:hint="@string/email_address"
                android:paddingHorizontal="@dimen/et_padding_horizontal"
                android:paddingVertical="@dimen/et_padding_vertical" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/styleText_InputLayout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:layout_marginTop="@dimen/margin_between_tv"
                app:endIconMode="password_toggle">

                <EditText
                    style="@style/style_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/vector_et_unselected"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/et_padding_horizontal"
                    android:paddingVertical="@dimen/et_padding_vertical" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/Style_tv_clickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/forgot_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/style_button_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_default"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_between_tv"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_not_a_member"
                    style="@style/style_tv_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_a_member" />

                <TextView
                    android:id="@+id/tv_register_now"
                    style="@style/Style_tv_clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/register_now" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_top_default"
                app:dividerColor="@color/divider" />

            <TextView
                style="@style/style_tv_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_default_horizontal"
                android:text="@string/or_continue_with" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_between_tv"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/padding_between_login_ic"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_login_google" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/padding_between_login_ic"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_login_apple" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_login_facebook" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>