<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.eCommerce.cart.CartActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_blue" />

        <TextView
            android:id="@+id/textView"
            style="@style/style_tv_semi_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/your_bag" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_default_horizontal"
        android:layout_marginTop="@dimen/margin_default_vertical"
        android:layout_weight="1"
        tools:listitem="@layout/item_cart_product" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/margin_default_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/tv_total"
            style="@style/style_tv_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/total"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_total_price"
            style="@style/style_tv_semi_primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/_83_00" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkout"
        style="@style/style_button_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default_horizontal"
        android:layout_marginTop="@dimen/margin_between_default"
        android:layout_marginBottom="@dimen/margin_default_vertical"
        android:text="@string/checkout" />
</LinearLayout>